# spa2txt_portable

./: README.md  README.txt
spa2txt-master/: CMakeLists.txt  main.c  spa.c
